# eis-data-loader

./: .gitignore  clusters.json  logging_conf.json  pyproject.toml
src/: __main__.py  config.py  minio_loader.py  processor.py  progress_view.py  schemas.py
src/utils/: aggregate.py  clusters.py  log_handlers.py  qmanager.py  reading.py
