[project]
name = "eis-data-loader"
version = "0.1.0"
description = ""
authors = [{ name = "INovikov Home", email = "nov.ilucha@yandex.ru" }]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "pydantic (>=2.11.7,<3.0.0)",
  "pandas (>=2.3.0,<3.0.0)",
  "numpy (>=2.3.0,<3.0.0)",
  "rich (>=14.0.0,<15.0.0)",
  "tqdm (>=4.67.1,<5.0.0)",
  "boto3 (>=1.38.37,<2.0.0)",
  "mdata-flow[compress] (>=0.0.6rc0,<0.0.7)",
  "boto3-stubs[boto3,s3] (>=1.38.37,<2.0.0)",
  "pandas-stubs (>=2.2.3.250527,<3.0.0.0)",
  "pandarallel (>=1.6.5,<2.0.0)",
  "threadpoolctl (>=3.6.0,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false
